[package]
name = "chip8"
version = "0.1.0"
authors = ["Teddy_Wang <wangtheo662@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
sdl2 = "0.33.0"
serde =  { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.0"

[dev-dependencies]
mockall = "0.6.0"
